# auem

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  base37.yaml  environment.yaml  makefile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml  types.yml
auem/: __init__.py  sampling.py  train-iterable.py  train.py
auem/config/: config-iterable.yaml  config.yaml
auem/config/criterions/: crossentr.yaml  nll.yaml
auem/config/dataloaders/: standard.yaml
auem/config/datasets/: audioset-dev2k-iterable.yaml  audioset-dev2k.yaml  audioset-iterable.yaml  audioset.yaml  dcase2020task1a.yaml
auem/config/hydra/job_logging/: debug.yaml  info.yaml
auem/config/models/: resnet18.yaml  simplecnn.yaml  simplenn.yaml
auem/config/optims/: adam.yaml
auem/config/transforms/: melspec.yaml
auem/data/: base.py  caching.py  datasets.py  split.py
auem/data/datasets/: __init__.py  audioset.py  dcase2020task1a.py
auem/evaluation/: __init__.py  confusion.py
auem/models/: __init__.py  audiotransformer.py  base.py  resnet.py  simplecnn.py  simplenn.py
notebooks/: 02 - model dev - pure transformer.ipynb
src/auem/: train.py
src/auem/configs/: mainconfig.py
src/auem/configs/experiment/tests/: classification.yaml  gan.yaml  gan_mel.yaml
src/auem/core/: sampling.py  train.py
src/auem/core/config/datasets/: audioset-dev2k.yaml
src/auem/core/config/hydra/job_logging/: debug.yaml
src/auem/core/config/models/: simplenn.yaml
src/auem/core/data/: caching.py
src/auem/core/data/datasets/: __init__.py
src/auem/core/evaluation/: confusion.py
tests/: test_auem_install.py  test_evaluation.py  test_train.py
tests/datasets/: test_caching.py  test_dataset_base.py
tests/models/: test_resnet.py  test_simplecnn.py  test_simplenn.py  test_transformer.py
