[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["auem.core", "auem.experiment", "auem.generation"]

[project]
name = "auem"
version = "0.0.1"
description = "Module for creating audio embeddings"
authors = [{name="Constantinos Dimitriou"}, {name="Christopher Jacoby"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-zen>=0.15.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
lint = [
    "pyrefly>=0.32.0",
    "ruff>=0.13.0",
]
test = [
    "pytest>=8.4.2",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "pytest-pretty>=1.3.0",
]
