[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project]
name = "auem"
version = "0.0.1"
description = "Module for creating audio embeddings"
authors = [{name="Constantinos Dimitriou"}, {name="Christopher Jacoby"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "traincore",
    "foundation",
    "generation",
    "hydra-core>=1.3.2",
    "hydra-zen>=0.15.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "jaxtyping>=0.3.2",
    "einops>=0.8.1",
    "beartype>=0.21.0",
    "lightning>=2.5.5",
]

[tool.uv.sources]
traincore = { workspace = true }
foundation = { workspace = true }
generation = { workspace = true }

[tool.uv.workspace]
members = ["packages/traincore", "packages/foundation", "packages/generation"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
lint = [
    "ty",
    "ruff",
]
test = [
    "pytest>=8.4.2",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "pytest-pretty>=1.3.0",
]

[tool.ruff.lint]
ignore = ["F722"]

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=auem,traincore,generation,foundation,beartype.beartype"
